--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="top_container">
         <div class="allTask_container">
             <div class="allTask">
-                <i class="fas fa-tasks"></i>
+                <i class="fas fa-tasks topIcon"></i>
             </div>
         </div>
         <div class="filter_container">
@@ -40,12 +40,12 @@
         <div class="action_button_container">
             <div class="action_container">
                 <div class="icon_container">
-                    <i class="fas fa-plus"></i>
+                    <i class="fas fa-plus topIcon"></i>
                 </div>
             </div>
             <div class="action_container">
                 <div class="icon_container">
-                    <i class="fas fa-times"></i>
+                    <i class="fas fa-times topIcon"></i>
                 </div>
             </div>
         </div>
